# pi_quarto_semestre_back_end

./: README.md  pyproject.toml
myproject/myapp/: urls.py  views.py
myproject/myapp/services/: testing_service.py
myproject/myproject/: settings.py
